# CNC_robot_control

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_safety_report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: release.md
docs/v0.1.0/: user_manual.md
src/tk_app/: __init__.py  __main__.py  config.py  main.py  serial_comm.py
src/tk_app/gcode/: __init__.py  database.py  parser.py  templates.py
src/tk_app/ui/: __init__.py  flow_editor.py  jog_panel.py  reference_panel.py  terminal.py  toolbar.py
tests/: test_smoke.py
